2008-08-05  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs, constant.cs, expression.cs, statement.cs: Resolve correctly 
	anonymous method inside checked/unchecked expression.

2008-08-05  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs (IsEqual): Guard against null.
	
	* ecore.cs, class.cs, convert.cs, const.cs, constant.cs, expression.cs,
	attribute.cs, enum.cs, statement.cs: Pass EmitContext to constant conversion
	routine. Fixed few misleading conversion errors.

2008-08-04  Marek Safar  <marek.safar@gmail.com>

	* class.cs: Consider generics when checking cycles in struct layout.

2008-08-04  Raja R Harinath  <harinath@hurrynot.org>

	* cs-tokenizer.cs (get_cmd_arg): Simplify.  Don't be too pedantic.

2008-08-04  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #414165
	* anonymous.cs: Use same anonymous implementation method for all anonymous
	method emits.

2008-08-04  Marek Safar  <marek.safar@gmail.com>

	* generic.cs, anonymous.cs, statement.cs: Emit inherited anonymous method
	constraints.

2008-08-04  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay: Typeof argument has to be a type expression.
	
	* namespace.cs: Check alias and namespace definitions collisions.
	
	* class.cs, pending.cs: Moved explicit interface accessor implementation
	check.
	
	* delegate.cs, expression.cs: Verify special name invocations.
	
2008-08-01  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay: Don't choke on empty generic type arguments.
	
	* cs-tokenizer.cs: Handle escaped preprocessor directives.
	
	* expression.cs, ecore.cs: Minor expressions bugs.

2008-08-01  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay: Removed duplicate interface declaration (fixes 2 conflicts)
	and added more error handling.
	
	* class.cs, iterators.cs, anonymous.cs: Removed useless interface parameter.
	
	*  modifiers.cs, enum.cs: Fixed.

2008-07-31  Jb Evain  <jbevain@novell.com>

	* driver.cs: remove -pkg ability of smcs.
